--- a/views/index.html
+++ b/views/index.html
@@ -266,7 +266,7 @@
                                                     <form class="content-widget" action="/allFlightss" method="post" enctype="application/x-www-form-urlencoded">
                                                         <div class="ffw-radio-selection">
                                                             <span class="ffw-radio-btn-wrapper">
-                                                                <input type="radio" name="flightType" value="oneWway" id="flight-type-1" checked="checked" class="ffw-radio-btn">
+                                                                <input type="radio" name="flightType" value="oneWay" id="flight-type-1" checked="checked" class="ffw-radio-btn">
                                                                 <label for="flight-type-1" class="ffw-radio-label">One Way</label>
                                                             </span>
                                                             <span class="ffw-radio-btn-wrapper">
