--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
         <!-- WRAPPER CONTENT-->
         <div class="wrapper-content">
             <!-- HEADER-->
-            <header>
+            <!-- <header>
                 <div class="bg-transparent header-01">
 
                     <div class="header-main">
@@ -52,13 +52,7 @@
                                         <div class="icons"></div>
                                     </div>
                                 </div> -->
-                                <div class="navbar-header">
-                                    <div class="logo">
-                                        <a href="index.html" class="header-logo">
-                                            <img src="./images/logo-white-color-1.png" alt="" />
-                                        </a>
-                                    </div>
-                                </div>
+                                
                                 <!-- <nav class="navigation">
                                     <ul class="nav-links nav navbar-nav">
                                         <li class="dropdown ">
@@ -144,12 +138,12 @@
                                         </form>
                                     </div>
                                 </nav> -->
-                                <div class="clearfix"></div>
+                                <!-- <div class="clearfix"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </header>
+            </header> --> 
             <!-- WRAPPER-->
             <div id="wrapper-content row">
                 <!-- MAIN CONTENT-->
@@ -158,6 +152,13 @@
                         <div class="container">
                             <div class="homepage-banner-warpper">
                                 <div class="homepage-banner-content">
+                                    <div class="navbar-logo">
+                                        <div class="logo">
+                                          <a href="index.html" class="header-logo">
+                                             <img src="./images/logo-white-color-1.png" alt="" />
+                                          </a>
+                                         </div>
+                                     </div>
                                     <div class="subTitles">
                                         <h1 class="banner">ONE WAY TO FLIGHT</h1>
                                         <h4 class="sub-banner">Fast&nbsp;/ Cheap&nbsp;/ Easy</h4>
