--- a/views/errorPage.html
+++ b/views/errorPage.html
@@ -32,132 +32,6 @@
     <style type="text/css">.fancybox-margin{margin-right:0px;}</style></head>
     <body class="linux mozilla5 5 pg-loaded">
         <div class="body-wrapper loaded">
-            <!-- MENU MOBILE-->
-            <div class="wrapper-mobile-nav">
-                <div class="header-topbar">
-                    <div class="topbar-search search-mobile">
-                        <form class="search-form">
-                            <div class="input-icon">
-                                <i class="btn-search fa fa-search"></i>
-                                <input type="text" placeholder="Search here..." class="form-control">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="header-main">
-                    <div class="menu-mobile">
-                        <ul class="nav-links nav navbar-nav">
-                            <li class="dropdown">
-                                <a href="http://swlabs.co/exploore/index.html" class="main-menu">
-                                    <span class="text">Home</span>
-                                </a>
-                                <span class="icons-dropdown">
-                                    <i class="fa fa-angle-down"></i>
-                                </span>
-                                <ul class="dropdown-menu dropdown-menu-1">
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/index.html" class="link-page">Homepage default</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/homepage-02.html" class="link-page">Homepage 02</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/homepage-03.html" class="link-page">Homepage 03</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/homepage-04.html" class="link-page">Homepage 04</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="http://swlabs.co/exploore/about-us.html" class="main-menu">
-                                    <span class="text">about</span>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="http://swlabs.co/exploore/tour-result.html" class="main-menu">
-                                    <span class="text">Tour</span>
-                                </a>
-                                <span class="icons-dropdown">
-                                    <i class="fa fa-angle-down"></i>
-                                </span>
-                                <ul class="dropdown-menu dropdown-menu-1">
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/tour-result.html" class="link-page">tour result</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/tour-view.html" class="link-page">tour view</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="http://swlabs.co/exploore/hotel-result.html" class="main-menu">
-                                    <span class="text">packages</span>
-                                </a>
-                                <span class="icons-dropdown">
-                                    <i class="fa fa-angle-down"></i>
-                                </span>
-                                <ul class="dropdown-menu dropdown-menu-1">
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/hotel-result.html" class="link-page">hotel result</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/hotel-view.html" class="link-page">hotel view</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="http://swlabs.co/exploore/blog.html" class="main-menu">
-                                    <span class="text">blog</span>
-                                </a>
-                                <span class="icons-dropdown">
-                                    <i class="fa fa-angle-down"></i>
-                                </span>
-                                <ul class="dropdown-menu dropdown-menu-1">
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/blog.html" class="link-page">blog list</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/blog-detail.html" class="link-page">blog detail</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="http://swlabs.co/exploore/car-rent-result.html" class="main-menu">
-                                    <span class="text">page</span>
-                                </a>
-                                <span class="icons-dropdown">
-                                    <i class="fa fa-angle-down"></i>
-                                </span>
-                                <ul class="dropdown-menu dropdown-menu-1">
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/car-rent-result.html" class="link-page">car rent result</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/cruises-result.html" class="link-page">cruises result</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://swlabs.co/exploore/404.html" class="link-page">page 404</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="http://swlabs.co/exploore/contact.html" class="main-menu">
-                                    <span class="text">contact</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="list-unstyled list-inline login-widget">
-                            <li>
-                                <a href="http://swlabs.co/exploore/404.html#" class="item">login</a>
-                            </li>
-                            <li>
-                                <a href="http://swlabs.co/exploore/404.html#" class="item">register</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <!-- WRAPPER CONTENT-->
             <div class="wrapper-content">
                 <!-- HEADER-->
@@ -168,6 +42,7 @@
                 <div id="wrapper-content">
                     <!-- MAIN CONTENT-->
                     <div class="main-content">
+                        
                         <section class="page-404">
                             <div class="page-clouds-1"></div>
                             <div class="page-clouds-2"></div>
@@ -176,8 +51,7 @@
                                     <h1 class="title-1">404</h1>
                                     <h2 class="title-2">page not found</h2>
                                     <div class="group-button">
-                                        <a href="" class="btn btn-maincolor">back to home</a>
-                                        <a href="" class="btn btn-transparent">get help</a>
+                                        <a href="http://78.46.70.93:3000" class="btn btn-maincolor">back to home</a>
                                     </div>
                                 </div>
                             </div>
@@ -185,11 +59,11 @@
                         </section>
                     </div>
                     <!-- BUTTON BACK TO TOP-->
-                    <div id="back-top">
+                    <!-- <div id="back-top">
                         <a href="http://swlabs.co/exploore/404.html#top" class="link">
                             <i class="fa fa-angle-double-up"></i>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- FOOTER-->
                 <footer>
