--- a/public/stylesheets/components.css
+++ b/public/stylesheets/components.css
@@ -213,14 +213,10 @@
 
 .page-banner {
     position: relative;
-
     overflow: hidden;
-
     width: 100%;
-    height: 540px;
-
+    min-height: 900px;
     text-align: left;
-
     color: #ffffff;
     background-repeat: repeat;
     background-attachment: fixed;
@@ -2338,8 +2334,8 @@
     /* vertical-align: middle; */
 }
 .navbar-logo .logo .header-logo img{
-    width: 210px;
-    margin-top: 30px;
+    width: 190px;
+    margin-top: 20px;
     margin-bottom: 10px;
 }
 @media screen and (max-width: 480px) {
@@ -6370,7 +6366,7 @@
 /*----------  page 404  ----------*/
 
 .page-404 {
-    background-image: url('../images/bg-section-404.jpg');
+    background-image: url('../images/airplane-homepage.jpg');
 }
 
 .page-404:before {
@@ -6510,6 +6506,7 @@
     font-size: 250px;
     font-weight: 500;
     font-weight: bold;
+    color:#565449;
     line-height: 180px;
 
     margin-top: 0;
@@ -6525,7 +6522,7 @@
 .page-404 .title-2 {
     font-size: 45px;
     font-weight: bold;
-
+    color: #565449;
     position: relative;
     z-index: 3;
 
