'--disable-dev-shm-usage'

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,8 @@
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Sky travel</title>
-
+    <title>AirFair</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONT CSS-->
     <link type="text/css" rel="stylesheet" href="./fonts/css">
