--- a/views/index.html
+++ b/views/index.html
@@ -182,8 +182,8 @@
                                                                 <div class="select-wrapper">
                                                                     <!--i.fa.fa-chevron-down-->
                                                                     <select class="form-control custom-select selectbox" name="select_trip_radius" id="select_trip_radius">
-                                                                        <option selected="selected" value=long>Long radius</option>
-                                                                        <option value=small>Small radius</option>
+                                                                        <option value=long>Long radius</option>
+                                                                        <option selected="selected" value=short>Short radius</option>
                                                                     </select>
                                                                 </div>
                                                             </div>
